🐳 Add Docker support
- Add Dockerfile for backend (Python/FastAPI)
- Add multi-stage Dockerfile for frontend (Node build + Nginx serve)
- Add docker-compose.yml with health checks and networking
- Add nginx.conf for frontend with API proxy to backend
- Add comprehensive DOCKER.md documentation
- Add .dockerignore files for both services
- Update README.md with Docker quick start
- Update frontend API URL to work with nginx proxy
- Add .env.example for Docker configuration

Docker deployment is now the recommended method!
Run: docker-compose up -d --build

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,13 @@ data/recipes/*.txt
 !data/.gitkeep
 !data/recipes/.gitkeep
 
+# Docker
+*.pid
+*.seed
+*.pid.lock
+
+# Logs
+logs/
+*.log
+backend.log
+frontend.log
